--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="list-group text-center pt-3 mt-2">
           <a  href="#" class="list-group-item list-group-item-action">Attendance</a>
           <a  href="https://learnosm.org/en/" class="list-group-item list-group-item-action">Learn OSM</a>
-          <a href="#"class="list-group-item list-group-item-action">Mapathon Tasks</a>
+          <a href="tasks/index.html"class="list-group-item list-group-item-action">Mapathon Tasks</a>
           <a  href="https://osmlab.github.io/show-me-the-way/#bounds=20.45275,87.31934,27.15692,93.14209"class="list-group-item list-group-item-action">Show Me The Way (Bangladesh)</a>
           <a href="https://resultmaps.neis-one.org/newestosm?c=Bangladesh#2/36.0/-10.5"class="list-group-item list-group-item-action">Latest OSM Contributors (7 days): 72 - Bangladesh</a>
           <a href="https://resultmaps.neis-one.org/osm-changesets#2/34.0/1.4"class="list-group-item list-group-item-action">Filter OSM Changesets by a Specific Text</a>
