--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <a  href="https://learnosm.org/en/" class="list-group-item list-group-item-action">Learn OSM</a>
           <a href="tasks/index.html"class="list-group-item list-group-item-action">Mapathon Tasks</a>
           <a  href="https://osmlab.github.io/show-me-the-way/#bounds=20.45275,87.31934,27.15692,93.14209"class="list-group-item list-group-item-action">Show Me The Way (Bangladesh)</a>
-          <a href="https://resultmaps.neis-one.org/newestosm?c=Bangladesh#2/36.0/-10.5"class="list-group-item list-group-item-action">Latest OSM Contributors (7 days): 72 - Bangladesh</a>
+          <a href="https://resultmaps.neis-one.org/newestosm?c=Bangladesh#2/36.0/-10.5"class="list-group-item list-group-item-action">Latest OSM Contributors (7 days): Bangladesh</a>
           <a href="https://resultmaps.neis-one.org/osm-changesets#2/34.0/1.4"class="list-group-item list-group-item-action">Filter OSM Changesets by a Specific Text</a>
           <a href="https://yosmhm.neis-one.org/"class="list-group-item list-group-item-action">Your OSM Heat Map</a>
           
