--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="./assets/bootstrap.min.css">
-  <title>MapBD Mapathon</title>
+  <title>Mapathon</title>
 </head>
 
 <body class="d-flex flex-column min-vh-100">
   <header class="jumbotron jumbotron-fluid bg-dark text-white text-center">
     <div class="container">
-      <h1 class="display-4">MapBD Mapathon</h1>
+      <h1 class="display-4">Mapathon</h1>
       <p class="lead">One Portal For Full Mapathon</p>
 <!--       <hr class="my-4"> -->
 <!--       <p> -->
