--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
   </main>
   <footer class="bg-light p-4 mt-auto text-center" style="background-color: #212529">
     <div class="container">
-<!--       <span class="text-muted">
+      <span class="text-muted">
         This site is under development by <a href="https://mapbd.github.io/" target="_blank">MapBD</a></span>
       <span>&#124;</span>
-      <span class="text-muted"> Reach out on <a href="https://www.facebook.com/Mapbd-108474674420943" target="_blank">Facebook</a></span> -->
+      <span class="text-muted"> Reach out on <a href="https://www.facebook.com/Mapbd-108474674420943" target="_blank">Facebook</a></span>
     </div>
   </footer>
   <script src="./assets/bootstrap.bundle.min.js"></script>
