--- a/index.html
+++ b/index.html
@@ -24,12 +24,14 @@
   <main class="container my-5">
     <div class="row justify-content-between">
       <div class="col">
-          <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vRTWJjYGigazJzO_Ya5FuLPwgFzYP8nCeVnMPNvjnvrntK4HgGtZdwjCW5c6_panAQTW9Hb-6gWdBsN/embed?start=false&loop=false&delayms=3000" frameborder="0" width="100%" height="400" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+          <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vRTWJjYGigazJzO_Ya5FuLPwgFzYP8nCeVnMPNvjnvrntK4HgGtZdwjCW5c6_panAQTW9Hb-6gWdBsN/embed?start=false&loop=false&delayms=3000" frameborder="0" width="100%" height="300px" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+          <iframe allow="camera; microphone; fullscreen; display-capture; autoplay" src="https://meet.jit.si/osmbd" style="height: 250px; width: 100%; border: 0px;"></iframe>
       </div>
       <div class="col">
         <h5 class="text-center">Get started on this Mapathon with these Tools:</h5>
         <div class="list-group text-center pt-3 mt-2">
-          <a  href="https://www.eventbrite.com/e/bangladesh-geo-week-celebration-2021-registration-208583648307" class="list-group-item list-group-item-action">Ragistration</a>
+          <!-- // https://www.eventbrite.com/e/bangladesh-geo-week-celebration-2021-registration-208583648307 -->
+          <a  href="#" class="list-group-item list-group-item-action">Ragistration</a>
           <a  href="https://learnosm.org/en/" class="list-group-item list-group-item-action">Learn OSM</a>
           <a href="https://mapbd.github.io/stats/"class="list-group-item list-group-item-action">Mapathon Stats</a>
           <a  href="https://osmlab.github.io/show-me-the-way/#bounds=20.45275,87.31934,27.15692,93.14209"class="list-group-item list-group-item-action">Show Me The Way (Bangladesh)</a>
