--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
       <div class="col">
           <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vRTWJjYGigazJzO_Ya5FuLPwgFzYP8nCeVnMPNvjnvrntK4HgGtZdwjCW5c6_panAQTW9Hb-6gWdBsN/embed?start=false&loop=false&delayms=3000" frameborder="0" width="100%" height="300px" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
 <!--           <iframe allow="camera; microphone; fullscreen; display-capture; autoplay" src="https://meet.jit.si/osmbd" style="height: 250px; width: 100%; border: 0px;"></iframe> -->
-        <div id="jaas-container" />
+	      <iframe style="height: 250px; width: 100%; border: 0px;"><div id="jaas-container" /></iframe>
+        
       </div>
       <div class="col">
         <h5 class="text-center">Get started on this Mapathon with these Tools:</h5>
